# bread

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
effie/: Cargo.toml
effie-macros/: Cargo.toml
effie-macros/src/: lib.rs
effie/src/: allocator.rs  lib.rs  protocol.rs  status.rs  types.rs  util.rs  w.rs  wstr.rs
effie/src/protocols/: device_path.rs  file.rs  loaded_image.rs  mod.rs  simple_filesystem.rs  simple_text_input.rs  simple_text_output.rs
effie/src/tables/: boot_services.rs  mod.rs  runtime_services.rs  system.rs
scripts/: qemu-aarch64.sh  qemu-riscv64gc.sh  qemu-x86_64.sh
src/: main.rs  system.rs
