[package]
name = "effie-macros"
version = "0.1.0"
edition = "2021"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Macros for effie"
repository = "https://github.com/morr0ne/bread"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.52", default-features = false, features = ["parsing", "proc-macro"] }
