[package]
name = "effie"
version = "0.1.0"
edition = "2021"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Idiomatic api to uefi"
repository = "https://github.com/morr0ne/bread"
readme = "../README.md"

[dependencies]
bitflags = "2.4.2"
uguid = "2.2.0"

effie-macros = { version = "0.1.0", path = "../effie-macros" }
